--- a/index.html
+++ b/index.html
@@ -197,9 +197,32 @@
   </section>
 
   <!-- Skills -->
+  <hr/>
+  <section class="section reveal section-padding">
+    <div class="container">
+      <div class="column">
+        <h1 class="title">SKILLS:</h1>
+        <h2 class="subtitle">REACT.JS | JAVASCRIPT | JQUERY | RUBY ON RAILS | NODE.JS | MONGOOSE | MONGODB | POSTGRESQL | ACTIVE ADMIN | EXPRESS | RESTFUL API | AXIOS | EJS | JSX | JWT | PASSPORT | BCRYPT | AMAZON S3 | SEMANTIC-UI-CSS | SEMANTIC-UI-REACT | BOOTSTRAP | BULMA | HTMLS5 | CSS3 | HEROKU | GIT </h2>
+      </div>
+    </div>
+  </section>
+  <hr/>
+
+  <!-- ABOUT ME -->
+  <section class="section reveal section-padding">
+      <div class="container">
+        <div class="column">
+          <h1 class="title">ABOUT ME:</h1>
+          <h2 class="subtitle">I am a web developer, yada yada.</h2>
+        </div>
+      </div>
+    </section>
+    <hr/>
 
   <!-- GRID -->
-  <section>
+<div class="reveal">
+  <section class="grid-section">
+    <!-- 1st row -->
     <div class="columns is-multiline is-centered is-gapless">
       <!-- 1st box -->
       <div class="column is-4 box">
@@ -212,7 +235,6 @@
           </div>
         </div>
       </div>
-      <!-- 2nd box -->
       <div class="column is-4 box">
         <figure class="image is-4by3 grid-border">
           <img src="./images/campsite_findr_2.png">
@@ -224,9 +246,11 @@
         </div>
       </div>
     </div>
-    </section>
-    <section>
-      <div class="columns is-multiline is-centered is-gapless">
+  </section>
+  <section>
+    <!-- 2nd row -->
+    <div class="columns is-multiline is-centered is-gapless">
+        <!-- 2nd box -->
         <div class="column is-4 box">
           <figure class="image is-4by3 grid-border">
             <img src="./images/surf_buddy.png">
@@ -249,6 +273,7 @@
         </div>
       </div>
   </section>
+</div>
 
   <!-- FOOTER -->
   <footer class="footer">
