finished styling for now

--- a/index.html
+++ b/index.html
@@ -43,18 +43,14 @@
   </nav>
 
   <!-- HERO -->
-  <section class="hero is-fullheight hero-image">
+  <section class="hero is-large hero-image">
     <div class="hero-body">
       <div class="container">
-        <h1 class="title">
-          Tina Park
-        </h1>
+        <h1 class="title">Tina Park</h1>
         <h2 class="subtitle">
-          A web developer yada yada
-        </h2>
+          A Full-Stack Web Developer with a deep appreciation for the User Experience.</h2>
       </div>
     </div>
-    <div class="hero-foot is-centered"id="portfolio-start"><h1>hello!</h1></div>
   </section>
 
   <!-- SUGARFREE GALLERY -->
