added github repo and live site buttons

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           A Full-Stack Web Developer with a deep appreciation for the User Experience.</h2>
       </div>
     </div>
+    <div id="portfolio-start"></div>
   </section>
 
   <!-- SUGARFREE GALLERY -->
@@ -74,17 +75,33 @@
             <br> React.js | Node.js | Mongoose | MongoDB | Express | RESTful API | Axios | JSX | JWT | Amazon S3 | Semantic-UI-CSS
             | Semantic-UI-React | JavaScript | HTMLS | CSS3 | Heroku</h1>
           <br>
-          <div class="icon-size">
-            <i class="devicon-react-original colored"></i>
-            <i class="devicon-nodejs-plain colored"></i>
-            <i class="devicon-mongodb-plain-wordmark colored"></i>
-            <i class="devicon-amazonwebservices-original colored"></i>
-            <i class="devicon-javascript-plain colored"></i>
-            <img src="images/semantic-logo.png" style="width:47px" />
-            <i class="devicon-html5-plain-wordmark colored"></i>
-            <i class="devicon-css3-plain-wordmark colored"></i>
-            <i class="devicon-heroku-plain-wordmark colored"></i>
-          </div>
+            <div class="icon-size">
+              <i class="devicon-react-original colored"></i>
+              <i class="devicon-nodejs-plain colored"></i>
+              <i class="devicon-mongodb-plain-wordmark colored"></i>
+              <i class="devicon-amazonwebservices-original colored"></i>
+              <i class="devicon-javascript-plain colored"></i>
+              <img src="images/semantic-logo.png" style="width:47px" />
+              <i class="devicon-html5-plain-wordmark colored"></i>
+              <i class="devicon-css3-plain-wordmark colored"></i>
+              <i class="devicon-heroku-plain-wordmark colored"></i>
+            </div>
+            <br>
+            <!-- github and live site buttons -->
+              <div>
+                <a class="button is-primary" href="https://github.com/gebigoma/sugarfree-gallery" target="_blank">
+                  <span class="icon">
+                    <i class="fab fa-github"></i>
+                  </span>
+                  <span>See code</span>
+                </a>
+                <a class="button is-primary" href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">
+                  <span class="icon">
+                    <i class="fas fa-desktop"></i>
+                  </span>
+                  <span>Go to site</span>
+                </a>
+              </div>
         </div>
       </div>
     </div>
@@ -121,6 +138,21 @@
             </a>
           </figure>
         </div>
+          <!-- github and live site buttons -->
+          <div>
+            <a class="button is-primary" href="https://github.com/gebigoma/surf_buddy" target="_blank">
+              <span class="icon">
+                <i class="fab fa-github"></i>
+              </span>
+              <span>See code</span>
+            </a>
+            <a class="button is-primary" href="https://stark-castle-27893.herokuapp.com/" target="_blank">
+              <span class="icon">
+                <i class="fas fa-desktop"></i>
+              </span>
+              <span>Go to site</span>
+            </a>
+          </div>
       </div>
     </div>
   </section>
@@ -156,6 +188,21 @@
             <i class="devicon-bootstrap-plain-wordmark colored"></i>
             <i class="devicon-heroku-plain-wordmark colored"></i>
           </div>
+            <!-- github and live site buttons -->
+            <div>
+              <a class="button is-primary" href="https://github.com/gebigoma/campsite_findr" target="_blank">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>See code</span>
+              </a>
+              <a class="button is-primary" href="https://enigmatic-ridge-61588.herokuapp.com/" target="_blank">
+                <span class="icon">
+                  <i class="fas fa-desktop"></i>
+                </span>
+                <span>Go to site</span>
+              </a>
+            </div>
         </div>
       </div>
     </div>
@@ -169,8 +216,7 @@
         <div class="column">
           <h1 class="title">Dream Recall</h1>
           <h2 class="subtitle">
-            Oh no! Drakey-head just had some cool dreams but they're slipping away.. Concentrate on the dreams you are first shown and
-            match them on the next screen. Player 2 takes their turn and the best score wins!</h2>
+            Oh no! Drakey-head just had some cool dreams but they're slipping away.. Concentrate on the dreams you are first shown and match them on the next screen. Player 2 takes their turn and the best score wins!</h2>
           <h1>
             <strong>TECHNOLOGIES:</strong>
             <br> Vanilla JavaScript | jQuery | HTML5 | CSS | Google Fonts | Giphy Gifs
@@ -189,6 +235,20 @@
             </a>
           </figure>
         </div>
+          <div>
+            <a class="button is-primary" href="https://github.com/gebigoma/dreamrecall" target="_blank">
+              <span class="icon">
+                <i class="fab fa-github"></i>
+              </span>
+              <span>See code</span>
+            </a>
+            <a class="button is-primary" href="https://gebigoma.github.io/dreamrecall/" target="_blank">
+              <span class="icon">
+                <i class="fas fa-desktop"></i>
+              </span>
+              <span>Go to site</span>
+            </a>
+          </div>
       </div>
     </div>
     <div id="about"></div>
@@ -200,7 +260,7 @@
     <div class="container">
       <div class="column">
         <h1 class="title">SKILLS:</h1>
-        <h2 class="subtitle">REACT.JS | JAVASCRIPT | JQUERY | RUBY ON RAILS | NODE.JS | MONGOOSE | MONGODB | POSTGRESQL | ACTIVE ADMIN | EXPRESS | RESTFUL API | AXIOS | EJS | JSX | JWT | PASSPORT | BCRYPT | AMAZON S3 | SEMANTIC-UI-CSS | SEMANTIC-UI-REACT | BOOTSTRAP | BULMA | HTMLS5 | CSS3 | HEROKU | GIT </h2>
+        <h2 class="subtitle">REACT.JS | JAVASCRIPT | JQUERY | RUBY ON RAILS | NODE.JS | MONGOOSE | MONGODB | POSTGRESQL | ACTIVE ADMIN | EXPRESS | RESTFUL API | AXIOS | EJS | JSX | JWT | PASSPORT | BCRYPT | AMAZON S3 | SEMANTIC-UI-CSS | SEMANTIC-UI-REACT | BOOTSTRAP | BULMA | HTMLS5 | CSS3 | WORDPRESS | HEROKU | GIT </h2>
       </div>
     </div>
   </section>
@@ -290,10 +350,16 @@
   </footer>
 
   <!-- IMPORT SCRIPTS -->
+  <!-- GITHUB BUTTON -->
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <!-- SCROLL REVEAL -->
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  <!-- FONT AWESOME -->
   <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+  <!-- JQUERY -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+  <!-- LOCAL JS -->
   <script src="index.js"></script>
 </body>
 
