added more styling

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <!-- import bulma.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-  <!-- import hover animation css -->
-  <link href="css/hover-min.css" rel="stylesheet">
   <!-- import local stylesheet -->
   <link rel="stylesheet" href="main.css">
+  <!-- import favicon -->
 </head>
 
 <body>
@@ -130,6 +129,22 @@
             <i class="devicon-css3-plain-wordmark colored"></i>
             <i class="devicon-heroku-plain-wordmark colored"></i>
           </div>
+          <br>
+            <!-- github and live site buttons -->
+            <div>
+              <a class="button is-primary" href="https://github.com/gebigoma/surf_buddy" target="_blank">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>See code</span>
+              </a>
+              <a class="button is-primary" href="https://stark-castle-27893.herokuapp.com/" target="_blank">
+                <span class="icon">
+                  <i class="fas fa-desktop"></i>
+                </span>
+                <span>Go to site</span>
+              </a>
+            </div>
         </div>
         <div class="column is-6">
           <figure class="image is-4by3 image-border">
@@ -138,21 +153,6 @@
             </a>
           </figure>
         </div>
-          <!-- github and live site buttons -->
-          <div>
-            <a class="button is-primary" href="https://github.com/gebigoma/surf_buddy" target="_blank">
-              <span class="icon">
-                <i class="fab fa-github"></i>
-              </span>
-              <span>See code</span>
-            </a>
-            <a class="button is-primary" href="https://stark-castle-27893.herokuapp.com/" target="_blank">
-              <span class="icon">
-                <i class="fas fa-desktop"></i>
-              </span>
-              <span>Go to site</span>
-            </a>
-          </div>
       </div>
     </div>
   </section>
@@ -188,6 +188,7 @@
             <i class="devicon-bootstrap-plain-wordmark colored"></i>
             <i class="devicon-heroku-plain-wordmark colored"></i>
           </div>
+          <br>
             <!-- github and live site buttons -->
             <div>
               <a class="button is-primary" href="https://github.com/gebigoma/campsite_findr" target="_blank">
@@ -227,6 +228,22 @@
             <i class="devicon-html5-plain-wordmark colored"></i>
             <i class="devicon-css3-plain-wordmark colored"></i>
           </div>
+          <br>
+            <!-- github and live site buttons -->
+            <div>
+              <a class="button is-primary" href="https://github.com/gebigoma/dreamrecall" target="_blank">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>See code</span>
+              </a>
+              <a class="button is-primary" href="https://gebigoma.github.io/dreamrecall/" target="_blank">
+                <span class="icon">
+                  <i class="fas fa-desktop"></i>
+                </span>
+                <span>Go to site</span>
+              </a>
+            </div>
         </div>
         <div class="column is-6">
           <figure class="image is-4by3 image-border">
@@ -235,20 +252,6 @@
             </a>
           </figure>
         </div>
-          <div>
-            <a class="button is-primary" href="https://github.com/gebigoma/dreamrecall" target="_blank">
-              <span class="icon">
-                <i class="fab fa-github"></i>
-              </span>
-              <span>See code</span>
-            </a>
-            <a class="button is-primary" href="https://gebigoma.github.io/dreamrecall/" target="_blank">
-              <span class="icon">
-                <i class="fas fa-desktop"></i>
-              </span>
-              <span>Go to site</span>
-            </a>
-          </div>
       </div>
     </div>
     <div id="about"></div>
@@ -271,7 +274,7 @@
       <div class="container">
         <div class="column">
           <h1 class="title">ABOUT ME:</h1>
-          <h2 class="subtitle">I am a web developer, yada yada.</h2>
+          <h2 class="subtitle">I'm a full stack web developer proficient in React.js, Node.js, Express, MongoDB, Ruby on Rails, JavaScript, HTML5, CSS3, and WordPress themes and plugins.</h2>
         </div>
       </div>
     </section>
@@ -288,9 +291,7 @@
           <img src="./images/sugarfree_3.jpeg" class="grid-image">
         </figure>
         <div class="middle">
-          <div class="text">
-            <a class="grid-link" href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">Sugarfree Gallery</a>
-          </div>
+          <a class="button is-primary is-medium" href="https://frozen-reaches-89510.herokuapp.com/" target="_blank">Sugarfree Gallery</a>
         </div>
       </div>
       <div class="column is-4 box">
@@ -298,9 +299,7 @@
           <img src="./images/campsite_findr_2.png">
         </figure>
         <div class="middle">
-          <div class="text">
-            <a class="grid-link" href="https://enigmatic-ridge-61588.herokuapp.com/" target="_blank">Campsite Findr</a>
-          </div>
+          <a class="button is-primary is-medium" href="https://enigmatic-ridge-61588.herokuapp.com/" target="_blank">Campsite Findr</a>
         </div>
       </div>
     </div>
@@ -314,9 +313,7 @@
             <img src="./images/surf_buddy.png">
           </figure>
           <div class="middle">
-            <div class="text">
-              <a class="grid-link" href="https://stark-castle-27893.herokuapp.com/" target="_blank">Surf Buddy</a>
-            </div>
+            <a class="button is-primary is-medium" href="https://stark-castle-27893.herokuapp.com/" target="_blank">Surf Buddy</a>
           </div>
         </div>
         <div class="column is-4 box">
@@ -324,9 +321,7 @@
             <img src="./images/dream_recall.png">
           </figure>
           <div class="middle">
-            <div class="text">
-              <a class="grid-link" href="https://gebigoma.github.io/dreamrecall/" target="_blank">Dream Recall</a>
-            </div>
+            <a class="button is-primary is-medium" href="https://gebigoma.github.io/dreamrecall/" target="_blank">Dream Recall</a>
           </div>
         </div>
       </div>
@@ -337,15 +332,16 @@
   <footer class="footer" id="contact">
     <div class="content has-text-centered">
         <h1 class="footer-style" style="font-size: 170%; font-weight: 700">
-          <i class="fas fa-envelope"></i> 
-          CONTACT ME: 
+          <!-- <i class="fas fa-envelope"></i>  -->contact me: 
           <a class="footer-style" href="mailto:tinasunpark@gmail.com?" target="_top">tinasunpark@gmail.com</a></h1>
             <div class="column no-padding">
-            <span style="font-size: 250%;">
-              <a class="footer-style" href="https://github.com/gebigoma" target="_blank"><i class="fab fa-github-square"></i></a>
-              <a class="footer-style" href"#"><i class="fab fa-linkedin"></i></a></span>
+              <span style="font-size: 250%;">
+                <a class="footer-style" href="https://github.com/gebigoma" target="_blank"><i class="fab fa-github-square"></i></a>
+                <a class="footer-style" href="https://www.linkedin.com/in/tina-sun-park/" target="_blank"><i class="fab fa-linkedin"></i></a></span>
             </div>
-              <div class="column tina-padding"><a href="#"><img style="width: 75px;" src="images/tina_heart_2.png"></a></div>
+            <div class="column tina-padding">
+                <a href="#"><img style="width: 75px;" src="images/tina_heart_2.png"></a>
+            </div>
     </div>
   </footer>
 
