added resume pdf button

--- a/index.html
+++ b/index.html
@@ -254,16 +254,15 @@
         </div>
       </div>
     </div>
-    <div id="about"></div>
   </section>
 
   <!-- Skills -->
-  <hr/>
+  <!-- <hr id="about"/> -->
   <section class="section reveal section-padding">
     <div class="container">
       <div class="column">
         <h1 class="title">SKILLS:</h1>
-        <h2 class="subtitle">REACT.JS | JAVASCRIPT | JQUERY | RUBY ON RAILS | NODE.JS | MONGOOSE | MONGODB | POSTGRESQL | ACTIVE ADMIN | EXPRESS | RESTFUL API | AXIOS | EJS | JSX | JWT | PASSPORT | BCRYPT | AMAZON S3 | SEMANTIC-UI-CSS | SEMANTIC-UI-REACT | BOOTSTRAP | BULMA | HTMLS5 | CSS3 | WORDPRESS | HEROKU | GIT </h2>
+        <h2 class="subtitle">REACT.JS | JAVASCRIPT | JQUERY | RUBY ON RAILS | NODE.JS | MONGODB | POSTGRESQL | ACTIVE ADMIN | EXPRESS | RESTFUL API | AXIOS | EJS | JSX | JWT | PASSPORT | BCRYPT | AMAZON S3 | SEMANTIC-UI-CSS | SEMANTIC-UI-REACT | BOOTSTRAP | BULMA | HTMLS5 | CSS3 | WORDPRESS | HEROKU | GIT </h2>
       </div>
     </div>
   </section>
@@ -274,18 +273,22 @@
       <div class="container">
         <div class="column">
           <h1 class="title">ABOUT ME:</h1>
-          <h2 class="subtitle">I'm a full stack web developer proficient in React.js, Node.js, Express, MongoDB, Ruby on Rails, JavaScript, HTML5, CSS3, and WordPress themes and plugins.</h2>
+          <h2 class="subtitle">I'm a full stack web developer proficient in React.js, Node.js, Express, MongoDB, Ruby on Rails, JavaScript, HTML5, CSS3, and WordPress themes and plugins. <br><br>Currently I'm working on an app using the MERN stack that aggregates original sugar-free recipes by healthy food bloggers from around the world. <br><br>Before this, I used to co-own and operate a Korean-Fusion fast casual restaurant. We started the business from the ground up with no prior experience, very minimal funds and turned a profit within 3 months of opening. I also implemented an efficient kitchen workflow to minimize waste.<br><br>My french bulldogs are my life. </h2>
+            <a class="button is-primary is-outlined" href="images/Tina Park Resume 2018.pdf" target="_blank">
+              <span class="icon">
+               <i class="far fa-file-pdf"></i>
+              </span>
+              <span>See Resume</span>
+          </a>
         </div>
       </div>
     </section>
-    <hr/>
+    <!-- <hr/> -->
 
   <!-- GRID -->
-<div class="reveal">
+<!-- <div class="reveal">
   <section class="grid-section">
-    <!-- 1st row -->
     <div class="columns is-centered is-gapless">
-      <!-- 1st box -->
       <div class="column is-4 box">
         <figure class="image is-4by3 grid-border">
           <img src="./images/sugarfree_3.jpeg" class="grid-image">
@@ -305,9 +308,7 @@
     </div>
   </section>
   <section>
-    <!-- 2nd row -->
     <div class="columns is-centered is-gapless">
-        <!-- 2nd box -->
         <div class="column is-4 box">
           <figure class="image is-4by3 grid-border">
             <img src="./images/surf_buddy.png">
@@ -326,7 +327,7 @@
         </div>
       </div>
   </section>
-</div>
+</div> -->
 
   <!-- FOOTER -->
   <footer class="footer" id="contact">
